--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,13 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%- include('./partials/head'); %>
+    
     <title>Dashobard</title>
+    <%- include('./partials/head'); %>
 </head>
 <body>
     <h1 class="mt-4">Dashborad</h1>
-    <p class="lead mb-3">Welcome <%= name %></p>
-    <a href="/users/logout"class="btn btn-success">Logout</a>
+      <div class="row">
+        <div class="col-md-9 m-auto">
+          <h2>Add Meal</h2>
+          <div class="jumbotron">
+          <div class="card card-body"> 
+            <%- include('./partials/messages'); %>
+              <form action="/meals/AddNewMeal" method="POST">
+                <div class="form-group">
+                  <label for="date">Date:</label><br/>
+                  <input 
+                  type="date" 
+                  id="date" 
+                  name="date"
+                  class="form-control"
+                  value="<%= typeof date != 'undefined' ? date : '' %>">
+                </div>  
+                <div class="form-group">
+                  <label for="MealType">Meal Type:</label><br/>
+                  <input 
+                  type="mealType" 
+                  id="mealType" 
+                  name="mealType"
+                  class="form-control"
+                  value="<%= typeof mealType != 'undefined' ? mealType: '' %>">
+                </div>
+                <div class="form-group">
+                  <label for="MealName">Meal Name:</label><br/>
+                  <input 
+                  type="MealName" 
+                  id="mealName" 
+                  name="mealName"
+                  class="form-control"
+                  value="<%= typeof mealName!= 'undefined' ? mealName: '' %>">                     
+                </div>
+                <div class="form-group">
+                  <label for="MealDescription">Meal Description:</label><br/>
+                  <input 
+                  type="mealDesc" 
+                  id="mealDesc" 
+                  name="mealDesc"
+                  class="form-control"
+                  value="<%= typeof mealDesc != 'undefined' ? mealDesc: '' %>">
+                </div>
+                <button type="submit" class="btn btn-success btn-block">ADD</button>
+              </form>
+             
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
 
 </body>
 </html>
