--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%- include('./partials/head'); %>
+</head>
+<body>
+ 
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
@@ -32,3 +41,7 @@
       </div>
     </div>
   </div>
+    
+</body>
+</html>   
+  
