--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,25 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="../">Nutrify Me </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav mr-auto">
+  <a class="navbar-brand" href="../">Nutrify Me </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <%  if (isAuthenticated) { %>
         <li class="nav-item">
-          <a class="nav-link" href="../users/login">Login
+          <a class="nav-link" href="../users/logout">Logout
             <span class="sr-only">(current)</span>
           </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../users/register">Sign Up</a>
-        </li>
+          </li>
+      <% }  else { %>  
+      <li class="nav-item">
+      <a class="nav-link" href="../users/login">Login
+        <span class="sr-only">(current)</span>
+      </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../users/register">Sign Up</a>
+      </li>
+      <% } %>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
       
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        
-      </form>
-    </div>
-  </nav>
+    </form>
+  </div>
+</nav>
