--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,27 +1,28 @@
 <% if(typeof errors != 'undefined')    { %>
     <% errors.forEach(function (error) { %>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <%= error.msg %>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-              <span  aria-hidden="true">&times; </span>
-          </button>
+        <div class="alert alert-warning alert-dismissible fade show " role="alert">
+            <p class="mb-0"><%= error.msg %></p>
+            <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
+                <span aria-hidden="true">&times; </span>
+            </button>
         </div>
     <% });  %>
 <% } %> 
 
 <% if(success_msg !='') { %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <%= success_msg %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+    <div class="alert  alert-success alert-dismissible fade show" role="alert">
+        <p class="mb-0"><%= success_msg %></p>
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
             <span aria-hidden="true">&times; </span>
         </button>
-      </div>
+        
+    </div>
 <% } %> 
 
 <% if(error_msg !='') { %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <%= error_msg %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+        <p class="mb-0"><%= error_msg %></p>
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
             <span aria-hidden="true">&times; </span>
         </button>
       </div>
@@ -29,8 +30,8 @@
 
 <% if(error!='') { %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <%= error %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+        <p class="mb-0"><%= error %></p>
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
             <span aria-hidden="true">&times; </span>
         </button>
       </div>
